syntax = "proto3";
option java_package = "com.DBMS.proto";
option java_outer_classname = "DBMS";
option java_multiple_files = false;

//表的结构形式
message Table{
  //列的结构形式
  string tableName = 1;
  message Column{
    //列名
    string columnName = 1;
    //数据类型
    string type = 2;
    //字段长度
    string typeLength = 3;
    //存储的值
    repeated string val = 4;
    //主键
    string primary = 5;
    //外键
    string foreign = 6;
    //非空
    string notNull = 7;
    //唯一
    string unique = 8;
    //默认
    string default = 9;
    //自增
    string identity = 10;
    //约束
    string check = 11;
    //备注
    string comment = 12;
  }
  repeated Column column = 2;
}


message Database{
  message DB{
    string name = 1;
    string type = 2;
    string filePath = 3;
    string createDate = 4;
  }
  repeated DB db = 1;
}

message TBMessage{
  message TB{
    string TBName = 1;
    string createDate = 2;
  }
  repeated TB tb = 1;
}

message Index{
  message IX{
    string dbName = 1;
    string tbName = 2;
    string cName = 3;
    string ixName = 4;
    message Map{
      string key = 1;
      repeated int32 val = 2;
    }
    repeated Map map = 5;
  }
  repeated IX ix = 1;
}

